# incubyte-training

.github/workflows/: ci.yaml
Part-1/: .gitignore
Part-1/Day-1/: control_flow_if_else.py  control_flow_loops.py  exercise1.py  exercise10.py  exercise2.py  exercise3.py  exercise4.py  exercise5.py  exercise6.py  exercise7.py  exercise8.py  exercise9.py  functions_lambda.py
Part-1/Day-2/: ex1.py  ex2.py  ex3.py  ex4.py  ex5.py  list_and_tuples.py  practice.py  results.txt  student-data-converted.json  student-data.json
Part-1/Day-3/: duck_philosophy.py  inheritance.py  library_system.py  magic_methods.py  practice.py  property_decorators.py
Part-1/Day-4/: practice.py  test_practice.py
Part-1/Day-5/: comprehension.py  context_manager.py  decorators.py  exercise_data_pipeline.py  exercise_type_hints.py  generators.py  iterator.py  mypy.py  text.txt
Part-1/Task Management /backend/: .gitignore  initial_setup.py  pyproject.toml  test.db
Part-1/Task Management /backend/migrations/: env.py
Part-1/Task Management /backend/src/app/: app.py  dependencies.py
Part-1/Task Management /backend/src/app/config/: database.py
Part-1/Task Management /backend/src/app/models/: user.py
Part-1/Task Management /backend/src/app/repositories/: task_repository.py
Part-1/Task Management /backend/src/app/schemas/: task.py  user.py
Part-1/Task Management /backend/src/app/services/: task_service.py  user_service.py
Part-1/Task Management /backend/tests/: test_api.py  test_task_service.py
Part-1/TaskManagement/: .gitignore
Part-2/Day-1/: asuncio_gather_exception.py  async_context_manager.py  async_generator.py  coroutine.py  fetcher.py  future.py  gather.py  rate_limiter.py  tasks.py
Part-2/Day-2/: .gitignore
Part-2/Day-2/backend/: .gitignore  Dockerfile  README.md  docker-compose.yml  init-db.sql  pyproject.toml
Part-2/Day-2/backend/alembic/: env.py
Part-2/Day-2/backend/alembic/versions/: 001_add_tasks_table.py
Part-2/Day-2/backend/src/app/: main.py
Part-2/Day-2/backend/src/app/api/v1/routes/: tasks.py
Part-2/Day-2/backend/src/app/background/: jobs.py
Part-2/Day-2/backend/src/app/core/: config.py
Part-2/Day-2/backend/src/app/db/: base.py  session.py
Part-2/Day-2/backend/src/app/models/: task.py
Part-2/Day-2/backend/src/app/schemas/: __init__.py  task.py
Part-2/Day-2/backend/src/app/services/: repository.py  task.py
Part-2/Day-2/backend/tests/: conftest.py
Part-2/Day-2/backend/tests/integration/: test_tasks_api.py
Part-2/Day-2/backend/tests/unit/: test_repository.py  test_service.py
Part-2/Day-3/: .gitignore  DataAccessLayer.py  alembic.ini  core_app.py  core_main.py  core_schema.py  exception.py  main.py  pyproject.toml  schema.py
Part-2/Day-4/: .gitignore  cprofile.py  lazy_evaluation.py  lru_cache.py  main.py  memory_profile.py  numpy.py  optimized_function.py  pyproject.toml  set_and_dictonaries.py
Part-2/Day-5/: .gitignore  emaillib.py  pyproject.toml
Part-2/Day-5/tests/: conftest.py  test__mock_api.py  test_async_double.py  test_asyncio.py  test_container.py  test_emaillib.py  test_factories.py  test_hypothesis.py  test_main.py  test_marker.py  test_note.txt
Part-2/TaskScheduler/backend/services/api-gateway/: Dockerfile  README.md  main.py  pyproject.toml
Part-2/TaskScheduler/backend/services/api-gateway/tests/: conftest.py  test_circuit_breaker.py  test_gateway.py
Part-2/TaskScheduler/backend/services/auth-service/: Dockerfile  README.md  main.py  pyproject.toml
Part-2/TaskScheduler/backend/services/auth-service/src/app/: dependencies.py  main.py
Part-2/TaskScheduler/backend/services/auth-service/src/app/api/v1/routes/: auth.py
Part-2/TaskScheduler/backend/services/auth-service/src/app/core/: config.py  logging.py  metrics.py  middleware.py  security.py  sentry.py
Part-2/TaskScheduler/backend/services/auth-service/src/app/db/: base.py  session.py
Part-2/TaskScheduler/backend/services/auth-service/src/app/models/: api_key.py  refresh_token.py  user.py
Part-2/TaskScheduler/backend/services/auth-service/src/app/schemas/: auth.py
Part-2/TaskScheduler/backend/services/auth-service/src/app/services/: auth.py
Part-2/TaskScheduler/backend/services/auth-service/tests/: conftest.py
Part-2/TaskScheduler/backend/services/auth-service/tests/integration/: test_auth_routes.py
Part-2/TaskScheduler/backend/services/auth-service/tests/unit/: test_auth_service.py  test_dependencies.py  test_rate_limit.py  test_security.py
(+208 files in other folders)
