[project]
name = "day-5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "emaillib>=1.0.0",
    "fastapi>=0.135.3",
    "hypothesis>=6.151.10",
    "mutmut>=3.5.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "sqlalchemy>=2.0.49",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "asyncpg>=0.31.0",
    "httpx>=0.28.1",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "respx>=0.22.0",
    "sqlalchemy>=2.0.49",
    "testcontainers>=4.14.2",
]

[tool.mutmut]
paths_to_mutate = ["main.py", "emaillib.py"]
tests_dir = ["tests"]
runner = "python -m pytest"
pytest_add_cli_args_test_selection = ["-k", "not container"]


