[project]
name = "task-scheduler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ram Pata", email = "rpata@revspringinc.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.116.0",
    "greenlet>=3.2.4",
    "pydantic-settings>=2.7.1",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "alembic>=1.18.4",
    "asgi-lifespan>=2.1.0",
    "coverage>=7.13.5",
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[project.scripts]
task-scheduler = "app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
